--- a/prac/src/assets/styles/style.scss
+++ b/prac/src/assets/styles/style.scss
@@ -58,6 +58,7 @@ body {
 @import "./navLogOut";
 @import "./footer";
 @import "./coursepage";
+@import "./orderhistory";
 
 @import "./homepageHead1";
 @import "./homepageHead2";
