--- a/prac/src/assets/styles/_cartpage.scss
+++ b/prac/src/assets/styles/_cartpage.scss
@@ -32,6 +32,7 @@ $white: #ffffff;
   padding: 0;
   font-family: "intreRegular", "Noto Sans TC", sans-serif;
   user-select: none;
+
 }
 
 body {
@@ -39,58 +40,119 @@ body {
 }
 
 .headerss {
-  height: 50px;
+  height: 130px;
 }
 
 .dCartContainer {
   width: 70%;
-  padding-left: 70px;
+  padding-left: 6%;
+
   .cartcompos {
     display: flex;
-    flex-direction: row;
-    
-  }
-    .dcartPageTitle {
-      padding-top: 30px;
-      padding-bottom: 30px;
-      .dCartTitle {
-        font: {
-          weight: 700;
-          size: 30px;
-        }
-        padding: 5px 0;
-        border-bottom: 6px solid $red;
-        line-height: 48px;
-        letter-spacing: 0.15em;
+    flex-direction: column;
+  width: 1010px;
+  margin: 0 auto;
 
-        color: $blue;
-        span {
-          svg {
-            path {
-              fill: $redDarker;
-            }
-          
+    hr {
+      color: $primaryLightest;
+      width: 100%;
+    }
+    .tabletitle {
+      color: $primaryLightestest;
+      display: flex;
+      flex-direction: row;
+      position: relative;
+      font-size: 18px;
+      height: 20px;
+      text-align: center;
+      padding: 5px 0;
+      > div:nth-child(1) {
+        position: relative;
+        width: 80px;
+      }
+      > div:nth-child(2) {
+         position: relative;
+          width: 167px;
+      }
+      > div:nth-child(3) {
+         position: relative;
+         width: 330px;
+      }
+      > div:nth-child(4),
+      > div:nth-child(5) {
+        position: relative;
+         width: 160px;
+      }
+      > div:nth-child(6) {
+       position: relative;
+       width: 110px;
+       
+      }
+    }
+  }
+  .dcartPageTitle {
+    padding-top: 30px;
+    padding-bottom: 30px;
+    .dCartTitle {
+      font: {
+        weight: 700;
+        size: 30px;
+      }
+      padding: 5px 0;
+      border-bottom: 6px solid $red;
+      line-height: 48px;
+      letter-spacing: 0.15em;
+
+      color: $blue;
+      span {
+        svg {
+          path {
+            fill: $redDarker;
+          }
         }
       }
     }
   }
 }
 .dCartList {
-  li {
-    margin: 5px 0;
+  width: 1010px;
+  height:500px;
+  overflow-y: auto;
+ overflow-x: hidden;
+ 
+&::-webkit-scrollbar {
+  width: 5px;
+
+}
+&::-webkit-scrollbar-track {
+  background: transparent;
+  width: 5px;
+}
+
+&::-webkit-scrollbar-thumb {
+  background: $blue;
+   border-radius: 5px;
+   &:hover {
+     background: $blueDarker;
+   }
+}
+/* 網頁捲軸【滑過時】把手的顏色 */
+  li label {
     height: 100px;
+    width: fit-content;
     display: flex;
     flex-direction: row;
     padding: 10px 0;
-  
+    align-items: center;
+
     input {
       margin: 30px;
       width: 20px;
     }
     img {
-      width: auto;
-      max-height: 90px;
-      padding: auto;
+      width: 167px;
+      height: 100%;
+      object-fit: contain;     
     }
     .dTrash {
       padding: 0 30px;
@@ -107,13 +169,16 @@ body {
     }
 
     .dCartitem {
+      display: flex;
+      flex-direction: column;
+      padding: 5px 15px;
+      width: 300px;
       .dCartTiltle {
-        padding: 20px 15px 0 15px;
         font: {
           weight: 700;
           size: 20px;
         }
-        line-height: 36px;
+        line-height: 1.5;
         letter-spacing: 0.1em;
         color: $blue;
         transition: all 0.3s;
@@ -130,7 +195,6 @@ body {
         line-height: 33px;
         letter-spacing: 0.1em;
         color: $white;
-        padding-left: 15px;
       }
     }
 
@@ -307,5 +371,60 @@ body {
     &:hover {
       background-color: $blueLighter;
     }
+  }
+}
+.dCollectlist {
+  justify-content: center;
+  list-style-type: none;
+  .slick-dots {
+    bottom: -80px;
+
+
+    li {
+      margin: 25px;
+      button::before {
+        content: "  ";
+        background-color: $pramaryDarker;
+        width: 60px;
+        height: 15px;
+        border-radius: 2px;
+      }
+    }
+
+    .slick-active {
+      button::before {
+        background-color: $blue;
+      }
+    }
+  }
+  a:hover > .slick-prev,
+  .slick-next {
+    z-index: 100;
+  }
+  .slick-arrow {
+    right: 0px;
+  }
+  .slick-track {
+    width: 100%;
+  }
+  .slick-prev:before {
+    content: url(../../components/CoursePage/img/toleft.svg);
+    left: -30px;
+    top: -10px;
+    position: absolute;
+    opacity: 0.35;
+    transition: all 0.8s;
+    &:hover {
+      opacity: 1;
+    }
+  }
+
+  .slick-next:before {
+    content: url(../../components/CoursePage/img/toright.svg);
+    right: -10px;
+    top: -10px;
+    position: absolute;
+    opacity: 0.35;
+    transition: all 0.8s;
   }
 }
