--- a/prac/src/assets/styles/style.css
+++ b/prac/src/assets/styles/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @font-face {
   font-family: "interRegular";
   src: url(./font/Inter-Regular.ttf);
@@ -262,36 +263,29 @@ footer .contactIconBox :last-child svg {
   text-decoration: none;
 }
 
+.badgecart {
+  background-color: #e23965;
+}
+
 body {
   background-color: #1d1f27;
 }
 
-.dTop svg {
-  border-radius: 50%;
-  position: fixed;
-  z-index: 200;
-  bottom: 10px;
-  right: 10px;
-}
-.dTop svg path {
-  transition: all 0.3s;
-  fill: #ffffff;
-  opacity: 0.3;
-}
-.dTop svg path:hover {
-  opacity: 0.8;
+.headersss {
+  height: 90px;
 }
 
 .divSale {
   background-color: #00b114;
-  height: 100%;
+  height: 90px;
   display: flex;
+  position: relative;
   font-weight: 700;
   font-size: 20px;
   line-height: 24px;
   letter-spacing: 0.15em;
   justify-content: center;
-  align-items: center;
+  align-items: baseline;
   padding: 8px 0px;
   color: #ffffff;
 }
@@ -327,7 +321,8 @@ body {
 }
 
 .divText {
-  height: 150px;
+  position: relative;
+  top: -40px;
   background-color: #1d1f27;
   color: #4967ff;
   text-align: center;
@@ -346,102 +341,123 @@ body {
   padding: 0 5px;
   box-sizing: border-box;
 }
-.slider:active, .slider:hover, .slider:focus {
-  outline: none;
-  border: none;
-}
-.slider .card {
+
+.card {
   width: 100%;
   height: 450px;
   border-radius: 5px;
   overflow: hidden;
   position: relative;
 }
-.slider .card .cardImg {
+.card .cardImg {
   position: absolute;
   top: 0px;
-  width: 100%;
+  width: 198%;
   left: 0;
   height: 100%;
   z-index: 2;
   background-color: #000000;
   transition: 0.5s;
 }
-.slider .card .cardImg img {
+.card .cardImg img {
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
 }
-.slider .card:hover img {
-  opacity: 0.4;
+.card:hover img {
+  opacity: 0.8;
   transition: 0.5s;
 }
-.slider .card:hover .cardImg {
+.card:hover .cardImg {
   transform: translateY(-100px);
   transition: all 0.9s;
 }
-.slider .card ul {
-  text-align: center;
+.card ul {
   position: relative;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 3;
+  height: 100%;
+  list-style-type: none;
   display: flex;
+  transition: all 0.6s;
+  justify-content: center;
+  justify-self: center;
 }
-.slider .card ul li {
-  list-style: none;
-}
-.slider .card ul li a {
-  position: relative;
-  margin: 0 auto;
-  width: 50px;
-  height: 50px;
-  line-height: 50px;
-  text-align: center;
-  background-color: #ffffff;
-  font-size: 23px;
-  color: #000000;
-  font-weight: bold;
-  margin: 0 6px;
-  transition: 0.4s;
-  transform: translateY(200px);
-  opacity: 0;
-}
-.slider .card ul li a span {
-  color: rgba(0, 0, 0, 0);
-  text-decoration: none;
-}
-.slider .card .titletxt {
+.card ul li {
   position: absolute;
-  bottom: 400px;
+  top: 40%;
+}
+.card ul li a {
+  align-self: center;
+  position: relative;
+}
+.card ul li a span {
+  height: 100%;
+  z-index: 200;
+}
+.card ul li a span svg {
+  width: 100px;
+}
+.card ul li a span svg path {
+  fill: #e23965;
+}
+.card .titletxt {
+  position: absolute;
   left: 0;
   bottom: 0;
-  background: #ffffff;
+  background: #8895ff;
+  color: #ffffff;
   width: 100%;
-  height: 40px;
+  height: 80px;
   z-index: 2;
   padding: 10px;
   transition: 0.6s;
   text-align: center;
   font-size: 30px;
+  font-weight: 500;
 }
-.slider .card:hover ul li a span {
-  transform: translateY(0px);
-  color: #000000;
+.card .text {
+  position: absolute;
+  display: none;
+  bottom: -100px;
+  padding: 50px;
+  left: 0;
+  width: 100%;
+  height: 30px;
+  z-index: 3;
+  padding: 10px;
+  transition: 3s;
+  text-align: center;
+  font-size: 20px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  color: #003dcb;
 }
-.slider .card:hover .titletxt {
+
+.card:hover ul {
+  z-index: 200;
+}
+.card:hover ul li a span {
+  transform: translateY(500px);
+}
+.card:hover .titletxt {
   bottom: 0;
   height: 100px;
 }
-.slider ul li Link button {
+.card:hover > .text {
+  display: block;
+  bottom: 0;
+  height: 50px;
+  transform: translateY(-10px);
+}
+
+ul li Link button {
   font-size: 50px;
   width: 100px;
   height: 30px;
   transition: 0.8s;
 }
-.slider ul li Link button:hover {
+ul li Link button:hover {
   transform: rotate(360deg);
   background-color: #ffffff;
 }
@@ -548,37 +564,41 @@ body {
 .divToYou .divItems {
   background-color: #ffffff;
   width: 80%;
+  height: 300px;
   margin: 0 auto;
   display: flex;
   border-bottom: 10px solid #e23965;
-}
-.divToYou .divItems .imgClass {
-  float: left;
 }
 .divToYou .divItems .imgClass img {
   height: 100%;
 }
 .divToYou .dClasstext {
-  float: right;
+  position: relative;
   padding: 30px;
   color: #9d9faa;
 }
-.divToYou .dClasstext .sStar {
-  color: #aa003b;
-}
 .divToYou .dClasstext .score {
-  padding: 3px px;
+  font-size: 20px;
 }
 .divToYou .dClasstext .score span {
-  padding: 0 3px;
-  vertical-align: middle;
+  padding: 0 5px;
+  vertical-align: baseline;
 }
 .divToYou .dClasstext .score .sPersonCount,
 .divToYou .dClasstext .score .sClock {
   float: right;
+  vertical-align: baseline;
 }
 .divToYou .dClasstext .score .sOnStar path {
   fill: #e0e03b;
+}
+.divToYou .dClasstext .score .sStar {
+  color: #aa003b;
+  font-size: 20px;
+}
+.divToYou .dClasstext .score .starspan {
+  padding: 1px;
+  vertical-align: baseline;
 }
 .divToYou .dClasstext h5 {
   padding: 10px;
@@ -586,16 +606,18 @@ body {
   letter-spacing: 0.1em;
   color: #4967ff;
   font-weight: 700;
-  font-size: 32px;
+  font-size: 28px;
 }
 .divToYou .dClasstext p {
   padding: 10px;
 }
 .divToYou .dClasstext .dClassPrice {
+  position: absolute;
+  bottom: 15px;
+  right: 50px;
   line-height: 50px;
   letter-spacing: 0.1em;
   color: #e23965;
-  text-align: center;
   font-weight: 600;
   font-size: 22px;
 }
@@ -621,7 +643,7 @@ body {
 }
 .divNEW .ulNewContainer {
   width: 90%;
-  height: 1200;
+  height: 450px;
   margin: 0 auto;
   list-style-type: none;
 }
@@ -661,7 +683,7 @@ body {
 }
 .divNEW .ulNewContainer .slick-next:before {
   content: url(../../components/CoursePage/img/toright.svg);
-  right: -60px;
+  right: -50px;
   top: -10px;
   position: absolute;
   opacity: 0.35;
@@ -670,7 +692,6 @@ body {
 
 .divAllCourse {
   margin: 10px;
-  padding: 100px;
   background: #1d1f27;
 }
 .divAllCourse .ulAllCourseContainer {
@@ -688,7 +709,6 @@ body {
 
 .dCard {
   text-decoration: none;
-  list-style-type: none;
   font-size: 18px;
   width: 280px;
   display: flex;
@@ -704,10 +724,6 @@ body {
 .dCard:hover {
   border: 2px solid #9d9faa;
   box-shadow: 0px 0px 0px 1px #a0a0a0, inset 0px 0px 21px 7px rgba(255, 255, 255, 0.35);
-}
-.dCard > img:hover,
-.dCard > div:hover {
-  filter: saturate(3);
 }
 .dCard .dCardScore {
   justify-content: baseline;
@@ -745,7 +761,7 @@ body {
   display: flex;
   float: right;
   font-size: 25px;
-  z-index: 300;
+  z-index: 8;
   color: #e23965;
 }
 .dCard .dCardMark {
@@ -785,8 +801,8 @@ body {
   position: relative;
   top: -20px;
 }
-.dCard svg path {
-  padding: 0 3px;
+.dCard .dCardClock {
+  align-items: baseline;
 }
 
 .dCardMore {
@@ -810,6 +826,149 @@ body {
 }
 .dCardMore button:hover {
   background-color: #003dcb;
+}
+
+.headerss {
+  height: 130px;
+}
+
+.dOrderHistoryContainer {
+  width: 70%;
+  padding-left: 6%;
+  padding-bottom: 100px;
+}
+.dOrderHistoryContainer .OrderHistorycompos {
+  display: flex;
+  flex-direction: column;
+  width: 1010px;
+  margin: 0 auto;
+}
+.dOrderHistoryContainer .OrderHistorycompos hr {
+  color: #6f717b;
+  width: 100%;
+}
+.dOrderHistoryContainer .OrderHistorycompos .tabletitle {
+  color: #9d9faa;
+  display: flex;
+  flex-direction: row;
+  position: relative;
+  font-size: 18px;
+  height: 20px;
+  text-align: center;
+  padding: 5px 0;
+}
+.dOrderHistoryContainer .OrderHistorycompos .tabletitle > div:nth-child(1) {
+  position: relative;
+  width: 167px;
+}
+.dOrderHistoryContainer .OrderHistorycompos .tabletitle > div:nth-child(2) {
+  position: relative;
+  width: 530px;
+}
+.dOrderHistoryContainer .OrderHistorycompos .tabletitle > div:nth-child(3),
+.dOrderHistoryContainer .OrderHistorycompos .tabletitle > div:nth-child(4) {
+  position: relative;
+  width: 160px;
+}
+.dOrderHistoryContainer .dOrderHistoryTitle {
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+.dOrderHistoryContainer .dOrderHistoryTitle .dOrderHistoryTitle {
+  font-weight: 700;
+  font-size: 30px;
+  padding: 5px 0;
+  border-bottom: 6px solid #e23965;
+  line-height: 48px;
+  letter-spacing: 0.15em;
+  color: #4967ff;
+}
+.dOrderHistoryContainer .dOrderHistoryTitle .dOrderHistoryTitle span svg path {
+  fill: #aa003b;
+}
+
+.dOrderHistoryList {
+  /* 網頁捲軸【滑過時】把手的顏色 */
+}
+.dOrderHistoryList::-webkit-scrollbar {
+  width: 5px;
+}
+.dOrderHistoryList::-webkit-scrollbar-track {
+  background: transparent;
+  width: 5px;
+}
+.dOrderHistoryList::-webkit-scrollbar-thumb {
+  background: #4967ff;
+  border-radius: 5px;
+}
+.dOrderHistoryList::-webkit-scrollbar-thumb:hover {
+  background: #003dcb;
+}
+.dOrderHistoryList li {
+  height: 100px;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  display: flex;
+  flex-direction: row;
+  padding: 10px 0;
+  align-items: center;
+}
+.dOrderHistoryList li input {
+  margin: 30px;
+  width: 20px;
+}
+.dOrderHistoryList li img {
+  width: 167px;
+  height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+.dOrderHistoryList li .dOrderHistoryListItem {
+  display: flex;
+  flex-direction: column;
+  padding: 5px 15px;
+  width: 500px;
+}
+.dOrderHistoryList li .dOrderHistoryListItem .dOrderHistoryTiltle {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.5;
+  letter-spacing: 0.1em;
+  color: #4967ff;
+  transition: all 0.3s;
+}
+.dOrderHistoryList li .dOrderHistoryListItem .dOrderHistoryTiltle:hover {
+  text-decoration: underline;
+  text-underline-offset: 5px;
+}
+.dOrderHistoryList li .dOrderHistoryListItem .dOrderHistoryTeacher {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 33px;
+  letter-spacing: 0.1em;
+  color: #ffffff;
+}
+.dOrderHistoryList li .dHistoryOldPrice {
+  width: 150px;
+  text-align: center;
+  padding: 40px 5px;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 33px;
+  letter-spacing: 0.1em;
+  color: #9d9faa;
+  text-decoration: line-through;
+}
+.dOrderHistoryList li .dHistorySpecailPrice {
+  width: 150px;
+  text-align: center;
+  padding: 40px 5px;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 33px;
+  letter-spacing: 0.1em;
+  color: #e23965;
 }
 
 .head1 {
