--- a/prac/src/components/header/index.css
+++ b/prac/src/components/header/index.css
@@ -1,10 +1,9 @@
 .header {
   height: 80px;
-  background-color: #fff;
+  background-color: black;
 }
 .header .header-top {
   height: 40px;
-  border-bottom: 1px solid greenyellow;
   text-align: end;
   line-height: 40px;
   padding-right: 20px;
@@ -13,12 +12,13 @@
   margin-right: 10px;
 }
 .header .header-top .ant-dropdown-link img {
-  -o-object-fit: contain;
-     object-fit: contain;
-  width: 30px;
-  height: 30px;
-  border-radius: 50%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 40px;
+  height: 40px;
+  border-radius: 80%;
   margin-right: 40px;
+  margin-top: 5px;
 }
 .header .header-bottom {
   height: 40px;
@@ -28,6 +28,7 @@
 .header .header-bottom .header-bottom-left {
   position: relative;
   width: 25%;
+  color: #4967ff;
   text-align: center;
   font-size: 20px;
 }
@@ -37,7 +38,7 @@
   right: 50%;
   top: 100%;
   transform: translateX(50%);
-  border-top: 20px solid white;
+  border-top: 20px solid black;
   border-bottom: 20px solid transparent;
   border-right: 20px solid transparent;
   border-left: 20px solid transparent;
