--- a/prac/src/assets/styles/_nav.scss
+++ b/prac/src/assets/styles/_nav.scss
@@ -76,17 +76,20 @@ nav {
         .listbox {
           display: flex;
           align-items: center;
+          justify-content: center;
+          img {
+            width: 22px;
+            // padding: 0 18px 0 24px;
+            margin-right: 10px;
+            margin-top: 2px;
+          }
         }
         a {
           color: $white;
           font-size: 18px;
           letter-spacing: 0.15em;
         }
-        img {
-          width: 22px;
-          padding: 0 18px 0 24px;
-          margin-top: 2px;
-        }
+        
         &:hover {
           background-color: $blueDarker;
         }
