--- a/prac/src/components/left-nav/index.css
+++ b/prac/src/components/left-nav/index.css
@@ -1,16 +1,20 @@
 .left-nav .left-nav-header {
-  height: 80px;
+  height: 83px;
   display: flex;
   align-items: center;
-  background-color: #002140;
+  background-color: black;
+  margin-bottom: 15px;
 }
 .left-nav .left-nav-header img {
-  margin: 0 15px;
-  width: 40px;
+  width: 100%;
   height: 40px;
 }
 .left-nav .left-nav-header h1 {
   color: white;
   font-size: 20px;
   margin-bottom: 0;
+}
+
+.ant-layout-sider-children {
+  background-color: black;
 }/*# sourceMappingURL=index.css.map */
