--- a/prac/src/components/left-nav/index.scss
+++ b/prac/src/components/left-nav/index.scss
@@ -1,12 +1,14 @@
+
 .left-nav{
     .left-nav-header{
-        height: 80px;
+        height: 83px;
         display: flex;
         align-items: center;
-        background-color: #002140;
+        background-color: black;
+        margin-bottom: 15px;
         img{
-            margin: 0 15px;
-            width: 40px;
+            // margin: 0 15px;
+            width: 100%;
             height: 40px;
         }
 
@@ -16,4 +18,7 @@
             margin-bottom: 0;
         }
     }
+}
+.ant-layout-sider-children{
+    background-color: black;
 }
