--- a/prac/src/pages/login/login.css
+++ b/prac/src/pages/login/login.css
@@ -1,14 +1,20 @@
 .login {
   width: 100%;
+  height: 800px;
+}
+.login .login-background {
+  z-index: -1;
+  position: absolute;
+  background-image: url("../../assets/imgs/ss.PNG");
+  filter: blur(8px);
+  -webkit-filter: blur(8px);
+  width: 100%;
   height: 100%;
-  background-image: url("../../assets/imgs/bg.jpg");
-  background-size: 100% 100%;
 }
 .login .login-header {
   display: flex;
   align-items: center;
   height: 80px;
-  background-color: rgba(21, 20, 13, 0.5);
 }
 .login .login-header .goBackHome {
   color: blue;
@@ -29,13 +35,18 @@
   margin-left: 30px;
 }
 .login .login-content {
+  z-index: 2;
+  position: absolute;
+  top: 10%;
+  left: 50%;
+  transform: translateX(-50%);
   box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
   -webkit-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
   height: 450px;
   width: 400px;
-  background-color: #fff;
-  margin: 50px auto;
+  background-color: rgb(211, 205, 205);
+  margin: 90px auto;
   padding: 20px 40px;
 }
 .login .login-content .memberLogin {
