--- a/prac/src/pages/login/login.scss
+++ b/prac/src/pages/login/login.scss
@@ -1,13 +1,23 @@
 .login{
     width: 100%;
+    height: 800px;
+    // background-size: 100% 100%;
+    // background-color: #2f3137;
+    .login-background{
+        z-index: -1;
+        position: absolute;
+    background-image: url('../../assets/imgs/ss.PNG');
+    filter: blur(8px);
+    -webkit-filter: blur(8px);
+    width: 100%;
     height: 100%;
-    background-image: url('../../assets/imgs/bg.jpg');
-    background-size: 100% 100%;
+    } 
     .login-header{
+        
         display: flex;
         align-items: center;
         height: 80px;
-        background-color: rgba(21,20,13,0.5);
+        // background-color: rgba(21,20,13,0.5);
         .goBackHome{
             color: blue;
             position: absolute;
@@ -28,38 +38,43 @@
         }
     }
     .login-content{
-        box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
-        -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
-        -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
-        height: 450px;
-        width: 400px;
-        background-color: #fff;
-        margin: 50px auto;
-        padding: 20px 40px;
-        .memberLogin{
+        z-index: 2;
+        position: absolute;
+        top: 10%;
+        left: 50%;
+        transform: translateX(-50%);
+    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+    -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+    height: 450px;
+    width: 400px;
+    background-color: rgb(211, 205, 205);
+    margin: 90px auto;
+    padding: 20px 40px;
+    .memberLogin{
+        font-size: 30px;
+        text-align: start;
+        font-weight: bold;
+        margin-bottom: 20px;
+    }
+    .memberLoginRegister{
+        text-align: end;
+        display: block;
+        width: 100%;
+    }
+    .iconItem{
+        display: flex;
+        justify-content: space-around;
+        .icon{
             font-size: 30px;
-            text-align: start;
-            font-weight: bold;
-            margin-bottom: 20px;
+            margin: 0 10px;
         }
-        .memberLoginRegister{
-            text-align: end;
-            display: block;
+        
+    }
+    .login-form{
+        .login-form-button{
             width: 100%;
         }
-        .iconItem{
-            display: flex;
-            justify-content: space-around;
-            .icon{
-                font-size: 30px;
-                margin: 0 10px;
-            }
-            
-        }
-        .login-form{
-            .login-form-button{
-                width: 100%;
-            }
-        }
+    }
     }
 }
