--- a/prac/src/assets/styles/_cartpage.scss
+++ b/prac/src/assets/styles/_cartpage.scss
@@ -158,6 +158,7 @@ body {
       padding: 0 30px;
       float: right;
       width: 50px;
+      cursor: pointer;
       svg {
         path {
           fill: $redDarker;
@@ -339,7 +340,7 @@ body {
     color: $white;
     margin: 5px 35px;
     &:hover {
-      background-color: $blueLighter;
+      background-color: $blueDarker;
     }
   }
 }
@@ -350,6 +351,8 @@ body {
   justify-content: center;
   img {
     width: 300px;
+    margin: 30px;
+    margin-bottom: 10px;
   }
 }
 .btnCartNone {
@@ -358,6 +361,7 @@ body {
     background-color: $blue;
     border-radius: 24px;
     padding: 10px 20px;
+    margin: 30px;
     font: {
       weight: 600;
       size: 18px;
@@ -369,7 +373,7 @@ body {
       color: $white;
     }
     &:hover {
-      background-color: $blueLighter;
+      background-color: $blueDarker;
     }
   }
 }
