--- a/prac/src/assets/styles/_cartpage.scss
+++ b/prac/src/assets/styles/_cartpage.scss
@@ -152,7 +152,7 @@ body {
     img {
       width: 167px;
       height: 100%;
-      object-fit: contain;     
+      object-fit: cover;     
     }
     .dTrash {
       padding: 0 30px;
