--- a/prac/src/assets/styles/style.scss
+++ b/prac/src/assets/styles/style.scss
@@ -59,6 +59,8 @@ body {
 @import "./footer";
 @import "./coursepage";
 @import "./orderhistory";
+@import "./cartpage";
+
 
 @import "./homepageHead1";
 @import "./homepageHead2";
