--- a/prac/src/assets/styles/_coursepage.scss
+++ b/prac/src/assets/styles/_coursepage.scss
@@ -655,7 +655,7 @@ ul li Link button {
   align-items: baseline;
 }
 }
-.dCardMore {
+.dCardMore,.dCardLast {
   width: 100%;
   height: 100px;
   padding: 10px 0;
@@ -676,6 +676,16 @@ ul li Link button {
     border-radius: 24px;
     &:hover {
       background-color: $blueDarker;
+    }
+  }
+}
+.dCardLast{
+  button {
+    background-color: $primaryLightestest;
+    color: $primary;
+  &:hover {
+      background-color: $primaryLighter;
+      color: $white;
     }
   }
 }
