--- a/prac/src/assets/styles/_coursepage.scss
+++ b/prac/src/assets/styles/_coursepage.scss
@@ -162,7 +162,7 @@ body {
   }
   ul {
     position: relative;
-    // transform: translate(-50%, -50%);
+    top:50%;
     height: 100%;
     list-style-type: none;
     display: flex;
@@ -171,7 +171,8 @@ body {
     justify-self: center;
     li {
       position: absolute;
-      top: 40%;
+      top: 0%;
+     
 
       a {
         align-self: center;
@@ -192,7 +193,7 @@ body {
   .titletxt {
     position: absolute;
     left: 0;
-    bottom: 0;
+    bottom: 10px;
     background: $blueLighter;
     color: $white;
     width: 100%;
@@ -206,15 +207,15 @@ body {
   }
   .text {
     position: absolute;
-    display: none;
-    bottom: -100px;
+    // display: none;
     padding: 50px;
     left: 0;
     width: 100%;
     height: 30px;
-    z-index: 3;
+    bottom: 10px;
+    z-index: 5;
     padding: 10px;
-    transition: 3s;
+    transition: 0.5s;
     text-align: center;
     font-size: 20px;
     white-space: nowrap;
@@ -226,24 +227,30 @@ body {
 
 .card:hover {
   ul {
-    z-index: 200;
+    z-index: 6;
+    li {
+      position: absolute;
+      transform: translateY(-60px);
+      transition: 0.2s;
+      
+      ;}
   }
   ul li a span {
     transform: translateY(500px);
   }
   .titletxt {
-    bottom: 0;
-    height: 100px;
+    bottom: -50px;
+    height: 200px;
   }
   > .text {
     display: block;
-    bottom: 0;
+    bottom: 30px;
     height: 50px;
-    transform: translateY(-10px);
+    transform: translateY(-20px);
   }
 }
 
-ul li Link button {
+ul li a button {
   font-size: 50px;
   width: 100px;
   height: 30px;
@@ -382,7 +389,7 @@ ul li Link button {
     color: $primaryLightestest;
   
     .score {
-      font-size: 20px;
+      font-size: 22px;
     
       span {
         padding: 0 5px;
@@ -419,6 +426,8 @@ ul li Link button {
       }
     }
     p {
+      position: relative;
+      top:-20px;
       padding: 10px;
     }
     .dClassPrice {
@@ -433,10 +442,13 @@ ul li Link button {
         weight: 600;
         size: 22px;
       }
-      button {
+     .dClassPriceBtn {
+      position: relative;
+      line-height: initial;
         transition: all 0.2s ease-out;
-        padding: 5px 15px;
+        padding: 0px 15px;
         display: flexbox;
+       
         width: 100px;
         height: 40px;
         background-color: $red;
@@ -578,18 +590,19 @@ ul li Link button {
     }
   }
   .dCardTitle {
+    display: flex;
     color: $blue;
     font: {
       weight: 700;
       size: 22px;
     }
     line-height: 33px;
-    letter-spacing: 0.1em;
+    letter-spacing: 0.05em;
   }
   .imgCard {
     object-fit: cover;
     position: relative;
-    height: 170px;
+    height: 180px;
   }
   .shopCart {
     position: absolute;
@@ -599,7 +612,7 @@ ul li Link button {
     display: flex;
     float: right;
     font-size: 25px;
-    z-index: 3;
+    z-index: 2;
     color: $red;
     &:hover{
       svg{
@@ -639,6 +652,8 @@ ul li Link button {
     height: 200px;
   }
   .dCardPrice {
+    display:flex;
+    position: relative;
     font: {
       weight: 600;
       size: 22px;
@@ -649,7 +664,7 @@ ul li Link button {
     color: $red;
     float: right;
     position: relative;
-    top: -20px;
+    top: -40px;
   }
 .dCardClock{
   align-items: baseline;
