--- a/prac/src/assets/styles/style.css
+++ b/prac/src/assets/styles/style.css
@@ -395,6 +395,7 @@ body {
 }
 .card ul {
   position: relative;
+  top: 50%;
   height: 100%;
   list-style-type: none;
   display: flex;
@@ -404,7 +405,7 @@ body {
 }
 .card ul li {
   position: absolute;
-  top: 40%;
+  top: 0%;
 }
 .card ul li a {
   align-self: center;
@@ -423,7 +424,7 @@ body {
 .card .titletxt {
   position: absolute;
   left: 0;
-  bottom: 0;
+  bottom: 10px;
   background: #8895ff;
   color: #ffffff;
   width: 100%;
@@ -437,15 +438,14 @@ body {
 }
 .card .text {
   position: absolute;
-  display: none;
-  bottom: -100px;
   padding: 50px;
   left: 0;
   width: 100%;
   height: 30px;
-  z-index: 3;
+  bottom: 10px;
+  z-index: 5;
   padding: 10px;
-  transition: 3s;
+  transition: 0.5s;
   text-align: center;
   font-size: 20px;
   white-space: nowrap;
@@ -455,29 +455,34 @@ body {
 }
 
 .card:hover ul {
-  z-index: 200;
+  z-index: 6;
+}
+.card:hover ul li {
+  position: absolute;
+  transform: translateY(-60px);
+  transition: 0.2s;
 }
 .card:hover ul li a span {
   transform: translateY(500px);
 }
 .card:hover .titletxt {
-  bottom: 0;
-  height: 100px;
+  bottom: -50px;
+  height: 200px;
 }
 .card:hover > .text {
   display: block;
-  bottom: 0;
+  bottom: 30px;
   height: 50px;
-  transform: translateY(-10px);
+  transform: translateY(-20px);
 }
 
-ul li Link button {
+ul li a button {
   font-size: 50px;
   width: 100px;
   height: 30px;
   transition: 0.8s;
 }
-ul li Link button:hover {
+ul li a button:hover {
   transform: rotate(360deg);
   background-color: #ffffff;
 }
@@ -598,7 +603,7 @@ ul li Link button:hover {
   color: #9d9faa;
 }
 .divToYou .dClasstext .score {
-  font-size: 20px;
+  font-size: 22px;
 }
 .divToYou .dClasstext .score span {
   padding: 0 5px;
@@ -629,6 +634,8 @@ ul li Link button:hover {
   font-size: 28px;
 }
 .divToYou .dClasstext p {
+  position: relative;
+  top: -20px;
   padding: 10px;
 }
 .divToYou .dClasstext .dClassPrice {
@@ -641,9 +648,11 @@ ul li Link button:hover {
   font-weight: 600;
   font-size: 22px;
 }
-.divToYou .dClasstext .dClassPrice button {
+.divToYou .dClasstext .dClassPrice .dClassPriceBtn {
+  position: relative;
+  line-height: initial;
   transition: all 0.2s ease-out;
-  padding: 5px 15px;
+  padding: 0px 15px;
   display: flexbox;
   width: 100px;
   height: 40px;
@@ -653,7 +662,7 @@ ul li Link button:hover {
   border: 2px solid #e23965;
   border-radius: 24px;
 }
-.divToYou .dClasstext .dClassPrice button:hover {
+.divToYou .dClasstext .dClassPrice .dClassPriceBtn:hover {
   background-color: #aa003b;
   border: 1px solid #e23965;
 }
@@ -768,17 +777,18 @@ ul li Link button:hover {
   fill: #e0e03b;
 }
 .dCard .dCardTitle {
+  display: flex;
   color: #4967ff;
   font-weight: 700;
   font-size: 22px;
   line-height: 33px;
-  letter-spacing: 0.1em;
+  letter-spacing: 0.05em;
 }
 .dCard .imgCard {
   -o-object-fit: cover;
      object-fit: cover;
   position: relative;
-  height: 170px;
+  height: 180px;
 }
 .dCard .shopCart {
   position: absolute;
@@ -788,7 +798,7 @@ ul li Link button:hover {
   display: flex;
   float: right;
   font-size: 25px;
-  z-index: 3;
+  z-index: 2;
   color: #e23965;
 }
 .dCard .shopCart:hover svg path {
@@ -821,6 +831,8 @@ ul li Link button:hover {
   height: 200px;
 }
 .dCard .dCardPrice {
+  display: flex;
+  position: relative;
   font-weight: 600;
   font-size: 22px;
   justify-content: center;
@@ -829,13 +841,13 @@ ul li Link button:hover {
   color: #e23965;
   float: right;
   position: relative;
-  top: -20px;
+  top: -40px;
 }
 .dCard .dCardClock {
   align-items: baseline;
 }
 
-.dCardMore {
+.dCardMore, .dCardLast {
   width: 100%;
   height: 100px;
   padding: 10px 0;
@@ -843,7 +855,7 @@ ul li Link button:hover {
   align-items: center;
   justify-content: center;
 }
-.dCardMore button {
+.dCardMore button, .dCardLast button {
   background-color: #4967ff;
   padding: 10px 30px;
   font-weight: 600;
@@ -854,8 +866,17 @@ ul li Link button:hover {
   color: #ffffff;
   border-radius: 24px;
 }
-.dCardMore button:hover {
+.dCardMore button:hover, .dCardLast button:hover {
   background-color: #003dcb;
+}
+
+.dCardLast button {
+  background-color: #9d9faa;
+  color: #1d1f27;
+}
+.dCardLast button:hover {
+  background-color: #44464f;
+  color: #ffffff;
 }
 
 .headerss {
@@ -999,6 +1020,385 @@ ul li Link button:hover {
   line-height: 33px;
   letter-spacing: 0.1em;
   color: #e23965;
+}
+
+@font-face {
+  font-family: "interRegular";
+  src: url(./font/Inter-Regular.ttf);
+}
+@font-face {
+  font-family: "interBold";
+  src: url(./font/Inter-Bold.ttf);
+}
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "intreRegular", "Noto Sans TC", sans-serif;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
+body {
+  background-color: #1d1f27;
+}
+
+.headerss {
+  height: 130px;
+}
+
+.dCartContainer {
+  width: 70%;
+  padding-left: 6%;
+}
+.dCartContainer .cartcompos {
+  display: flex;
+  flex-direction: column;
+  width: 1010px;
+  margin: 0 auto;
+}
+.dCartContainer .cartcompos hr {
+  color: #6f717b;
+  width: 100%;
+}
+.dCartContainer .cartcompos .tabletitle {
+  color: #9d9faa;
+  display: flex;
+  flex-direction: row;
+  position: relative;
+  font-size: 18px;
+  height: 20px;
+  text-align: center;
+  padding: 5px 0;
+}
+.dCartContainer .cartcompos .tabletitle > div:nth-child(1) {
+  position: relative;
+  width: 80px;
+}
+.dCartContainer .cartcompos .tabletitle > div:nth-child(2) {
+  position: relative;
+  width: 167px;
+}
+.dCartContainer .cartcompos .tabletitle > div:nth-child(3) {
+  position: relative;
+  width: 330px;
+}
+.dCartContainer .cartcompos .tabletitle > div:nth-child(4),
+.dCartContainer .cartcompos .tabletitle > div:nth-child(5) {
+  position: relative;
+  width: 160px;
+}
+.dCartContainer .cartcompos .tabletitle > div:nth-child(6) {
+  position: relative;
+  width: 110px;
+}
+.dCartContainer .dcartPageTitle {
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+.dCartContainer .dcartPageTitle .dCartTitle {
+  font-weight: 700;
+  font-size: 30px;
+  padding: 5px 0;
+  border-bottom: 6px solid #e23965;
+  line-height: 48px;
+  letter-spacing: 0.15em;
+  color: #4967ff;
+}
+.dCartContainer .dcartPageTitle .dCartTitle span svg path {
+  fill: #aa003b;
+}
+
+.dCartList {
+  width: 1010px;
+  height: 500px;
+  overflow-y: auto;
+  overflow-x: hidden;
+  /* 網頁捲軸【滑過時】把手的顏色 */
+}
+.dCartList::-webkit-scrollbar {
+  width: 5px;
+}
+.dCartList::-webkit-scrollbar-track {
+  background: transparent;
+  width: 5px;
+}
+.dCartList::-webkit-scrollbar-thumb {
+  background: #4967ff;
+  border-radius: 5px;
+}
+.dCartList::-webkit-scrollbar-thumb:hover {
+  background: #003dcb;
+}
+.dCartList li label {
+  height: 100px;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  display: flex;
+  flex-direction: row;
+  padding: 10px 0;
+  align-items: center;
+}
+.dCartList li label input {
+  margin: 30px;
+  width: 20px;
+}
+.dCartList li label img {
+  width: 167px;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.dCartList li label .dTrash {
+  padding: 0 30px;
+  float: right;
+  width: 50px;
+  cursor: pointer;
+}
+.dCartList li label .dTrash svg path {
+  fill: #aa003b;
+}
+.dCartList li label .dTrash svg path:hover {
+  fill: #e23965;
+}
+.dCartList li label .dCartitem {
+  display: flex;
+  flex-direction: column;
+  padding: 5px 15px;
+  width: 300px;
+}
+.dCartList li label .dCartitem .dCartTiltle {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.5;
+  letter-spacing: 0.1em;
+  color: #4967ff;
+  transition: all 0.3s;
+}
+.dCartList li label .dCartitem .dCartTiltle:hover {
+  text-decoration: underline;
+  text-underline-offset: 5px;
+}
+.dCartList li label .dCartitem .dCartTeacher {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 33px;
+  letter-spacing: 0.1em;
+  color: #ffffff;
+}
+.dCartList li label .dOldPrice {
+  width: 150px;
+  text-align: center;
+  padding: 40px 5px;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 33px;
+  letter-spacing: 0.1em;
+  color: #9d9faa;
+  text-decoration: line-through;
+}
+.dCartList li label .dSpecailPrice {
+  width: 150px;
+  text-align: center;
+  padding: 40px 5px;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 33px;
+  letter-spacing: 0.1em;
+  color: #e23965;
+}
+
+.checkoutorder {
+  display: flexbox;
+  position: absolute;
+  float: right;
+  right: 30px;
+  top: 200px;
+  width: 280px;
+  height: 350px;
+  background-color: #44464f;
+  font-weight: 500;
+}
+.checkoutorder .dOrderTitle {
+  font-size: 25px;
+  font-weight: 60px;
+  padding: 25px 30px;
+  letter-spacing: 0.2em;
+  color: #ffffff;
+}
+.checkoutorder .sSubtotaltitle {
+  font-size: 18px;
+  line-height: 48px;
+  letter-spacing: 0.15em;
+  color: #ffffff;
+  padding: 9px 0 9px 30px;
+}
+.checkoutorder .sSubtotal {
+  font-size: 26px;
+  line-height: 33px;
+  float: right;
+  padding: 9px 30px 9px 0px;
+  letter-spacing: 0.1em;
+  color: #9d9faa;
+}
+.checkoutorder .sSubtotal ::before {
+  display: flex;
+}
+.checkoutorder .sDiscount {
+  font-size: 20px;
+  line-height: 33px;
+  letter-spacing: 0.1em;
+  color: #9d9faa;
+  padding: 10px;
+}
+.checkoutorder .sDiscount input {
+  margin: 5px;
+  background-color: #1d1f27;
+  border-radius: 10px;
+}
+.checkoutorder .sDiscount input[type=checkbox] {
+  width: 15px;
+  height: 15px;
+}
+.checkoutorder .sNoSpecial {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 33px;
+  letter-spacing: 0.1em;
+  color: #e23965;
+}
+.checkoutorder .icodeitems {
+  text-align: center;
+  display: flex;
+  padding: 0 20px;
+}
+.checkoutorder .icodeitems .iDiscountCode {
+  background-color: #1d1f27;
+  border: 2px solid #9d9faa;
+  width: 100%;
+  height: 100%;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 5px;
+}
+.checkoutorder .icodeitems .iCodeSubmit {
+  width: 100px;
+  background-color: #9d9faa;
+  border: 2px solid #9d9faa;
+  color: #ffffff;
+  transition: all 0.3s ease;
+}
+.checkoutorder .icodeitems .iCodeSubmit:hover {
+  background-color: #44464f;
+  color: #ffffff;
+}
+.checkoutorder .dTotalPrice {
+  font-size: 30px;
+  line-height: 33px;
+  font-weight: 700;
+  text-align: right;
+  letter-spacing: 0.1em;
+  padding: 9px 20px 9px 0px;
+  color: #e23965;
+}
+.checkoutorder .iorder {
+  background-color: #4967ff;
+  padding: 10px 80px;
+  border-radius: 24px;
+  border: 1px solid #4967ff;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 22px;
+  letter-spacing: 0.15em;
+  color: #ffffff;
+  margin: 5px 35px;
+}
+.checkoutorder .iorder:hover {
+  background-color: #003dcb;
+}
+
+.dCartNone {
+  display: flex;
+  padding: 50px 0 0 0;
+  justify-content: center;
+}
+.dCartNone img {
+  width: 300px;
+  margin: 30px;
+  margin-bottom: 10px;
+}
+
+.btnCartNone {
+  text-align: center;
+}
+.btnCartNone button {
+  background-color: #4967ff;
+  border-radius: 24px;
+  padding: 10px 20px;
+  margin: 30px;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 22px;
+  letter-spacing: 0.15em;
+  color: #ffffff;
+}
+.btnCartNone button svg {
+  color: #ffffff;
+}
+.btnCartNone button:hover {
+  background-color: #003dcb;
+}
+
+.dCollectlist {
+  justify-content: center;
+  list-style-type: none;
+}
+.dCollectlist .slick-dots {
+  bottom: -80px;
+}
+.dCollectlist .slick-dots li {
+  margin: 25px;
+}
+.dCollectlist .slick-dots li button::before {
+  content: "  ";
+  background-color: #000000;
+  width: 60px;
+  height: 15px;
+  border-radius: 2px;
+}
+.dCollectlist .slick-dots .slick-active button::before {
+  background-color: #4967ff;
+}
+.dCollectlist a:hover > .slick-prev,
+.dCollectlist .slick-next {
+  z-index: 100;
+}
+.dCollectlist .slick-arrow {
+  right: 0px;
+}
+.dCollectlist .slick-track {
+  width: 100%;
+}
+.dCollectlist .slick-prev:before {
+  content: url(../../components/CoursePage/img/toleft.svg);
+  left: -30px;
+  top: -10px;
+  position: absolute;
+  opacity: 0.35;
+  transition: all 0.8s;
+}
+.dCollectlist .slick-prev:before:hover {
+  opacity: 1;
+}
+.dCollectlist .slick-next:before {
+  content: url(../../components/CoursePage/img/toright.svg);
+  right: -10px;
+  top: -10px;
+  position: absolute;
+  opacity: 0.35;
+  transition: all 0.8s;
 }
 
 .head1 {
