--- a/prac/src/assets/styles/_coursepage.scss
+++ b/prac/src/assets/styles/_coursepage.scss
@@ -49,7 +49,7 @@ body {
 .divSale {
   background-color: $greenDarker;
 
-  height: 90px;
+  height: 105px;
   display: flex;
   position: relative;
   font: {
@@ -179,7 +179,7 @@ body {
         position: relative;
         span {
           height: 100%;
-          z-index: 200;
+          z-index: 2;
           svg {
             width: 100px;
             path {
@@ -213,7 +213,7 @@ body {
     width: 100%;
     height: 30px;
     bottom: 10px;
-    z-index: 5;
+    z-index: 3;
     padding: 10px;
     transition: 0.5s;
     text-align: center;
@@ -227,7 +227,7 @@ body {
 
 .card:hover {
   ul {
-    z-index: 6;
+    z-index: 3;
     li {
       position: absolute;
       transform: translateY(-60px);
@@ -283,7 +283,7 @@ ul li a button {
   }
   .slick-prev,
   .slick-next {
-    z-index: 100;
+    z-index: 2;
   }
   .slick-arrow {
     right: 0px;
@@ -310,6 +310,7 @@ ul li a button {
     opacity: 0.35;
     transition: all 0.8s;
     top: -10px;
+    
   }
 }
 
@@ -340,7 +341,7 @@ ul li a button {
   }
   .slick-prev,
   .slick-next {
-    z-index: 100;
+    z-index: 2;
   }
   .slick-arrow {
     right: 0px;
@@ -494,7 +495,7 @@ ul li a button {
     }
     .slick-prev,
     .slick-next {
-      z-index: 100;
+      z-index: 2;
     }
     .slick-arrow {
       right: 0px;
@@ -630,6 +631,9 @@ ul li a button {
     padding: 5px;
     color: $red;
     z-index: 2;
+    &:hover{
+      path:$red
+    }
   }
   .dCardTeacher {
     color: $primary;
