--- a/prac/src/assets/styles/style.css
+++ b/prac/src/assets/styles/style.css
@@ -297,7 +297,7 @@ body {
 
 .divSale {
   background-color: #00b114;
-  height: 90px;
+  height: 105px;
   display: flex;
   position: relative;
   font-weight: 700;
@@ -413,7 +413,7 @@ body {
 }
 .card ul li a span {
   height: 100%;
-  z-index: 200;
+  z-index: 2;
 }
 .card ul li a span svg {
   width: 100px;
@@ -443,7 +443,7 @@ body {
   width: 100%;
   height: 30px;
   bottom: 10px;
-  z-index: 5;
+  z-index: 3;
   padding: 10px;
   transition: 0.5s;
   text-align: center;
@@ -455,7 +455,7 @@ body {
 }
 
 .card:hover ul {
-  z-index: 6;
+  z-index: 3;
 }
 .card:hover ul li {
   position: absolute;
@@ -505,7 +505,7 @@ ul li a button:hover {
 }
 .dHotCarousel .slick-prev,
 .dHotCarousel .slick-next {
-  z-index: 100;
+  z-index: 2;
 }
 .dHotCarousel .slick-arrow {
   right: 0px;
@@ -559,7 +559,7 @@ ul li a button:hover {
 }
 .divToYou .slick-prev,
 .divToYou .slick-next {
-  z-index: 100;
+  z-index: 2;
 }
 .divToYou .slick-arrow {
   right: 0px;
@@ -694,7 +694,7 @@ ul li a button:hover {
 }
 .divNEW .ulNewContainer .slick-prev,
 .divNEW .ulNewContainer .slick-next {
-  z-index: 100;
+  z-index: 2;
 }
 .divNEW .ulNewContainer .slick-arrow {
   right: 0px;
@@ -812,6 +812,9 @@ ul li a button:hover {
   padding: 5px;
   color: #e23965;
   z-index: 2;
+}
+.dCard .dCardMark:hover {
+  path: #e23965;
 }
 .dCard .dCardTeacher {
   color: #1d1f27;
@@ -1055,7 +1058,7 @@ body {
 .dCartContainer .cartcompos {
   display: flex;
   flex-direction: column;
-  width: 1010px;
+  width: 65vw;
   margin: 0 auto;
 }
 .dCartContainer .cartcompos hr {
@@ -1068,13 +1071,13 @@ body {
   flex-direction: row;
   position: relative;
   font-size: 18px;
-  height: 20px;
+  height: 30px;
   text-align: center;
   padding: 5px 0;
 }
 .dCartContainer .cartcompos .tabletitle > div:nth-child(1) {
   position: relative;
-  width: 80px;
+  width: 100px;
 }
 .dCartContainer .cartcompos .tabletitle > div:nth-child(2) {
   position: relative;
@@ -1091,7 +1094,7 @@ body {
 }
 .dCartContainer .cartcompos .tabletitle > div:nth-child(6) {
   position: relative;
-  width: 110px;
+  width: 50px;
 }
 .dCartContainer .dcartPageTitle {
   padding-top: 30px;
@@ -1111,7 +1114,6 @@ body {
 }
 
 .dCartList {
-  width: 1010px;
   height: 500px;
   overflow-y: auto;
   overflow-x: hidden;
@@ -1354,6 +1356,7 @@ body {
 .dCollectlist {
   justify-content: center;
   list-style-type: none;
+  height: 400px;
 }
 .dCollectlist .slick-dots {
   bottom: -80px;
@@ -1394,7 +1397,7 @@ body {
 }
 .dCollectlist .slick-next:before {
   content: url(../../components/CoursePage/img/toright.svg);
-  right: -10px;
+  right: -70px;
   top: -10px;
   position: absolute;
   opacity: 0.35;
@@ -2032,6 +2035,7 @@ body {
 
 .dashboardBottom {
   height: 1070px;
+  box-sizing: content-box !important;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -2054,6 +2058,7 @@ body {
 }
 .dashboardBottom .dashboardBottomRow1,
 .dashboardBottom .dashboardBottomRow2 {
+  box-sizing: content-box !important;
   width: 81.15vw;
   display: flex;
   justify-content: space-between;
@@ -2067,7 +2072,11 @@ body {
   padding: 32px;
   width: 696px;
   height: 328px;
-  background-color: #44464f;
+  background-color: #2f3137;
+}
+.dashboardBottom .dashboardBottomRow1 .addOrder,
+.dashboardBottom .dashboardBottomRow2 .addOrder {
+  box-sizing: content-box !important;
 }
 .dashboardBottom .dashboardBottomRow1 .addOrder .pr7,
 .dashboardBottom .dashboardBottomRow2 .addOrder .pr7 {
@@ -2149,9 +2158,9 @@ body {
   /* For a circular appearance we need a border-radius. */
   border-radius: 50%;
   /* The background will be the radio dot's color. */
-  background: #44464f;
+  background: #2f3137;
   /* The border will be the spacing between the dot and the outer circle */
-  border: 3px solid #44464f;
+  border: 3px solid #2f3137;
   /* And by creating a box-shadow with no offset and no blur, we have an outer circle */
   box-shadow: 0 0 0 2px #6f717b;
 }
@@ -2287,13 +2296,17 @@ body {
 .dashboardBottom .dashboardBottomRow1 .orderHistory,
 .dashboardBottom .dashboardBottomRow2 .nowTotal,
 .dashboardBottom .dashboardBottomRow2 .orderHistory {
+  box-sizing: content-box !important;
   margin-top: 36px;
   padding: 32px;
   width: 696px;
   height: 426px;
-  background-color: #44464f;
+  background-color: #2f3137;
 }
 
+.nowOrder {
+  box-sizing: content-box !important;
+}
 .nowOrder .titleBox {
   width: 100%;
   display: flex;
@@ -2531,6 +2544,9 @@ body {
   top: -2px;
 }
 
+.orderHistory {
+  box-sizing: content-box !important;
+}
 .orderHistory .titleBox {
   width: 100%;
   display: flex;
