--- a/prac/src/assets/styles/style.scss
+++ b/prac/src/assets/styles/style.scss
@@ -68,6 +68,7 @@ body {
 @import "./dashboardMain";
 @import "./dashboardBottom";
 @import "./video";
+@import "./profile";
 
 
 .navLogOut #active {
