--- a/prac/src/assets/styles/_video.scss
+++ b/prac/src/assets/styles/_video.scss
@@ -191,6 +191,7 @@
         }
         ul{
           list-style-type: none;
+          margin-bottom: 0%;
           
           li{
             height: 89px;
