--- a/prac/src/assets/styles/_cartpage.scss
+++ b/prac/src/assets/styles/_cartpage.scss
@@ -32,7 +32,6 @@ $white: #ffffff;
   padding: 0;
   font-family: "intreRegular", "Noto Sans TC", sans-serif;
   user-select: none;
-
 }
 
 body {
@@ -50,8 +49,8 @@ body {
   .cartcompos {
     display: flex;
     flex-direction: column;
-  width: 65vw;
-  margin: 0 auto;
+    width: 65vw;
+    margin: 0 auto;
 
     hr {
       color: $primaryLightest;
@@ -59,35 +58,155 @@ body {
     }
     .tabletitle {
       color: $primaryLightestest;
-      display: flex;
-      flex-direction: row;
-      position: relative;
       font-size: 18px;
+      display: flex;
+
       height: 30px;
-     text-align: center;
-      padding: 5px 0;
-      > div:nth-child(1) {
+      text-align: center;
+
+      > th:nth-child(1) {
         position: relative;
         width: 100px;
       }
-      > div:nth-child(2) {
-         position: relative;
-          width: 167px;
-      }
-      > div:nth-child(3) {
-         position: relative;
-         width: 330px;
-      }
-      > div:nth-child(4),
-      > div:nth-child(5) {
+      > th:nth-child(2) {
         position: relative;
-         width: 160px;
+        width: 167px;
       }
-      > div:nth-child(6) {
-       position: relative;
-       width: 50px;
-       
+      > th:nth-child(3) {
+        position: relative;
+        width: 330px;
       }
+      > th:nth-child(4),
+      > th:nth-child(5) {
+        position: relative;
+        width: 160px;
+      }
+      > th:nth-child(6) {
+        position: relative;
+        width: 50px;
+      }
+    }
+    .dCartList {
+      height: 300px;
+      display: block;
+      flex-direction: column;
+      width: 100%;
+      overflow-y: auto;
+      overflow-x: hidden;
+
+      &::-webkit-scrollbar {
+        width: 5px;
+      }
+      &::-webkit-scrollbar-track {
+        background: transparent;
+        width: 5px;
+      }
+
+      &::-webkit-scrollbar-thumb {
+        background: $blue;
+        border-radius: 5px;
+        &:hover {
+          background: $blueDarker;
+        }
+      }
+      /* 網頁捲軸【滑過時】把手的顏色 */
+
+      tr {
+        > td:nth-child(1) {
+          position: relative;
+          width: 100px;
+          text-align: center;
+          input {
+            margin: 30px;
+            width: 20px;
+          }
+        }
+        > td:nth-child(2) {
+          position: relative;
+          width: 167px;
+          img {
+            width: fit-contentf;
+            height: 100%;
+            object-fit: cover;
+          }
+        }
+        > td:nth-child(3) {
+          position: relative;
+          width: 330px;
+          display: flex;
+          flex-direction: column;
+          padding: 14px 15px;
+          .dCartTiltle {
+            
+            font: {
+              weight: 700;
+              size: 20px;
+            }
+            line-height: 1.5;
+            letter-spacing: 0.1em;
+            color: $blue;
+            transition: all 0.3s;
+            &:hover {
+              text-decoration: underline;
+              text-underline-offset: 5px;
+            }
+          }
+          .dCartTeacher {
+            font: {
+              weight: 400;
+              size: 18px;
+            }
+            height: 30px;
+            line-height: 33px;
+            letter-spacing: 0.1em;
+            color: $white;
+          }
+        }
+        > td:nth-child(4) {
+          position: relative;
+          width: 160px;
+            text-align: center;
+            padding: 40px 5px;
+            font: {
+              weight: 600;
+              size: 18px;
+            }
+            line-height: 33px;
+            letter-spacing: 0.1em;
+            color: $primaryLightestest;
+            text-decoration: line-through;
+          
+        }
+        > td:nth-child(5) {
+          position: relative;
+          width: 160px;
+    
+          text-align: center;
+          padding: 40px 5px;
+          font: {
+            weight: 600;
+            size: 20px;
+          }
+          line-height: 33px;
+          letter-spacing: 0.1em;
+          color: $red;
+    
+        }
+        > td:nth-child(6) {
+          position: relative;
+          width: 50px;
+          svg {
+            path {
+              fill: $redDarker;
+              &:hover {
+                fill: $red;
+              }
+            }
+          }
+        }
+      }
+
+
     }
   }
   .dcartPageTitle {
@@ -114,117 +233,7 @@ body {
     }
   }
 }
-.dCartList {
-  height:500px;
-  overflow-y: auto;
- overflow-x: hidden;
- 
-&::-webkit-scrollbar {
-  width: 5px;
 
-}
-&::-webkit-scrollbar-track {
-  background: transparent;
-  width: 5px;
-}
-
-&::-webkit-scrollbar-thumb {
-  background: $blue;
-   border-radius: 5px;
-   &:hover {
-     background: $blueDarker;
-   }
-}
-/* 網頁捲軸【滑過時】把手的顏色 */
-  li label {
-    height: 100px;
-    width: fit-content;
-    display: flex;
-    flex-direction: row;
-    padding: 10px 0;
-    align-items: center;
-
-    input {
-      margin: 30px;
-      width: 20px;
-    }
-    img {
-      width: 167px;
-      height: 100%;
-      object-fit: cover;     
-    }
-    .dTrash {
-      padding: 0 30px;
-      float: right;
-      width: 50px;
-      cursor: pointer;
-      svg {
-        path {
-          fill: $redDarker;
-          &:hover {
-            fill: $red;
-          }
-        }
-      }
-    }
-
-    .dCartitem {
-      display: flex;
-      flex-direction: column;
-      padding: 5px 15px;
-      width: 300px;
-      .dCartTiltle {
-        font: {
-          weight: 700;
-          size: 20px;
-        }
-        line-height: 1.5;
-        letter-spacing: 0.1em;
-        color: $blue;
-        transition: all 0.3s;
-        &:hover {
-          text-decoration: underline;
-          text-underline-offset: 5px;
-        }
-      }
-      .dCartTeacher {
-        font: {
-          weight: 400;
-          size: 18px;
-        }
-        line-height: 33px;
-        letter-spacing: 0.1em;
-        color: $white;
-      }
-    }
-
-    .dOldPrice {
-      width: 150px;
-      text-align: center;
-      padding: 40px 5px;
-      font: {
-        weight: 600;
-        size: 18px;
-      }
-      line-height: 33px;
-      letter-spacing: 0.1em;
-      color: $primaryLightestest;
-      text-decoration: line-through;
-    }
-    .dSpecailPrice {
-      width: 150px;
-      text-align: center;
-      padding: 40px 5px;
-      font: {
-        weight: 600;
-        size: 20px;
-      }
-      line-height: 33px;
-      letter-spacing: 0.1em;
-      color: $red;
-    }
-  }
-}
 .checkoutorder {
   display: flexbox;
   position: absolute;
@@ -381,11 +390,8 @@ body {
   list-style-type: none;
   height: 400px;
 
-
-
   .slick-dots {
     bottom: -80px;
-
 
     li {
       margin: 25px;
